<resources>
    <string name="app_name">TwitterMusk</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login">Login</string>
    <string name="insert_email">Insert email</string>
    <string name="insert_password">Insert password</string>
    <string name="login_activity">Login activity</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="name">Name</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in!</string>
</resources>